--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGO_URL="mongodb://127.0.0.1:27017/swiggyDB"
+MONGO_URL='mongodb+srv://anandv0052:swiggy@anand@swiggy-db.lp3w8.mongodb.net/?retryWrites=true&w=majority&appName=swiggy-db'
 PORT=4000
 JWT_SECRET="VISHWA"
